# ndmapper

./: .travis.yml  CHANGES.rst  LICENSE  MANIFEST.in  README.md  README.rst  TODO  pyproject.toml  setup.cfg  setup.py
docs/: conf.py  index.rst  rtd-pip-requirements
docs/data/: index.rst
docs/process/: index.rst
docs/tools/: index.rst
ndmapper/: __init__.py  calibrations.py  conftest.py  data.py  iraf_db.py  iraf_task.py  libutils.py  services.py  utils.py
ndmapper/io/: __init__.py  _fits.py  _util.py  formats.py  io.py  mapio.py
ndmapper/lib/: cosmetics.py  fitting.py  gemini.py
ndmapper/lib/gmos/: __init__.py  gmos.py
ndmapper/lib/gmos/spec/: ifu.py  spec.py
ndmapper/modes/: cosmetics.py  gemini.py
ndmapper/modes/gmos/: gmos.py
ndmapper/modes/gmos/spec/: __init__.py  ifu.py  spec.py
ndmapper/tests/: test_data.py
quadpype/: __init__.py  data.py  iraf_task.py
quadpype/tests/: test_data.py
