[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build

[ah_bootstrap]
auto_use = True

[metadata]
package_name = quadpype
description = Automate pushing Gemini data through a series of processing steps
long_description = Quick-and-dirty code for pushing data through (currently Gemini IRAF) processing steps in Python
author = James E.H. Turner
author_email = jturner@gemini.edu
license = BSD
url = https://github.com/jehturner/quadpype
edit_on_github = True
github_project = jehturner/quadpype
