[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled
addopts = -s

[ah_bootstrap]
auto_use = True

[metadata]
package_name = ndmapper
description = Track mapping of AstroPy NDData objects to/from files.
long_description = Track mapping of AstroPy NDData objects to/from files and their mutual relationships, to help automate data processing sequences in Python, in particular integrating Python and IRAF steps as seamlessly as practical.
author = Association of Universities for Research in Astronomy, Inc. (by James E.H. Turner)
author_email = jturner@gemini.edu
license = BSD
url = https://github.com/jehturner/ndmapper
edit_on_github = True
github_project = jehturner/ndmapper

[entry_points]
astropy-package-template-example = packagename.example_mod:main
